k8s/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: ardpeiris/authentication:latest
          ports:
            - containerPort: 4001
