k8s/course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: ardpeiris/course:latest
          ports:
            - containerPort: 4003
