k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ardpeiris/frontend:latest
          ports:
            - containerPort: 5173
          # resources:
          #   requests:
          #     memory: "128Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "256Mi"
          #     cpu: "500m"
