k8s/learner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner
  template:
    metadata:
      labels:
        app: learner
    spec:
      containers:
        - name: learner
          image: ardpeiris/learner:latest
          ports:
            - containerPort: 4002
