k8s/auth.yaml

apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  type: ClusterIP
  selector:
    app: authentication
  ports:
    - port: 4001
      targetPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: ardpeiris/ctse-authentication:latest
          ports:
            - containerPort: 4001
