k8s/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  selector:
    app: authentication
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
