k8s/course-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course
spec:
  selector:
    app: course
  ports:
    - port: 4003
      targetPort: 4003
  type: ClusterIP
