k8s/course.yaml

apiVersion: v1
kind: Service
metadata:
  name: course
spec:
  type: ClusterIP
  selector:
    app: course
  ports:
    - port: 4003
      targetPort: 4003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course
  template:
    metadata:
      labels:
        app: course
    spec:
      containers:
        - name: course
          image: ardpeiris/ctse-course:latest
          ports:
            - containerPort: 4003
