k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 4000
      targetPort: 4000
  type: LoadBalancer
