k8s/learner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learner
spec:
  selector:
    app: learner
  ports:
    - port: 4002
      targetPort: 4002
  type: ClusterIP
