k8s/learner.yaml

apiVersion: v1
kind: Service
metadata:
  name: learner
spec:
  type: ClusterIP
  selector:
    app: learner
  ports:
    - port: 4002
      targetPort: 4002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner
  template:
    metadata:
      labels:
        app: learner
    spec:
      containers:
        - name: learner
          image: ardpeiris/ctse-learner:latest
          ports:
            - containerPort: 4002
