k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  ports:
    - port: 4004
      targetPort: 4004
  type: ClusterIP
